# rust-dynamo-integration

./: .env.example  Cargo.toml  Dockerfile  README.md  comands.sh  docker-compose.yml
dynamodb-data/: shared-local-instance.db
src/: app.rs  config.rs  error.rs  logging.rs  macros.rs  main.rs
src/db/: dynamodb.rs  mod.rs
src/handlers/: users.rs
src/middlewares/: logging.rs
src/models/: user.rs
