[package]
name = "dynamo_rust_integration"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy= "0.15"
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
aws-config = "=1.1.7"
aws-sdk-dynamodb = "=1.38.0"
uuid = { version = "1", features = ["v4"] }
hyper = "1.8.1"
aws-credential-types = "1.2.10"
